config file arg

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ ctrlc = "3.2.5"
 thiserror = "1"
 hex = "0.4.3"
 axum = { version = "0.6.11", features=["json"] }
+clap = { version = "4.3.14", features = ["env", "default", "derive"]}
 
 [dev-dependencies]
 serial_test = "1.0.0"
