chore: update deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,15 @@ license = "BSD 3-Clause"
 readme = "README.md"
 
 [dependencies]
-tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros"] }
 prost = "0.11"
-tonic = { version = "0.8.3", features = ["prost"] }
-config = { version = "0.12", features = ["toml"] }
-tracing = "0.1.36"
-tracing-subscriber = "0.2.0"
+tonic = { version = "0.9.2", features = ["prost"] }
+config = { version = "0.13", features = ["toml"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0", features = ["preserve_order"]}
-redb = { version = "0.13.0", features = ["logging"] }
+redb = { version = "1.0.5" }
 log = "0.4.17"
 ctrlc = "3.2.5"
 thiserror = "1"
@@ -26,8 +26,8 @@ clap = { version = "4.3.14", features = ["env", "default", "derive"]}
 anyhow = "1.0.72"
 
 [dev-dependencies]
-serial_test = "1.0.0"
+serial_test = "2.0.0"
 tracing-test = "0.2.4"
 
 [build-dependencies]
-tonic-build = { version="0.8.3", features = ["prost"] }
+tonic-build = { version="0.9.2", features = ["prost"] }
