--- a/config.toml
+++ b/config.toml
@@ -3,5 +3,7 @@ admin_keys = ["HEX key of admin"]
 # api_key = "apikey"
 # api_listen_host = "127.0.0.1"
 # api_listen_port = 3000
+# grpc_listen_host = "127.0.0.1"
+# grpc_listen_port = 50001
 
 # db_path = "./manage_users.redb"
