--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,14 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0", features = ["preserve_order"]}
-redb = { version = "1.0.5" }
 log = "0.4.17"
 ctrlc = "3.2.5"
 hex = "0.4.3"
 axum = { version = "0.6.11", features=["json"] }
 clap = { version = "4.3.14", features = ["env", "default", "derive"]}
 anyhow = "1.0.72"
+url = "2.4.0"
+nostr-sdk = "0.22.0"
 
 [dev-dependencies]
 serial_test = "2.0.0"
